# NSI-normalizer-MTP-CourseWork-Chuev-Maxim

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  sast.yml
data/samples/: fstec_real_dirty.csv  fstec_real_dirty_shuffled.csv  fstec_sample.csv  okved_big_dirty.csv  okved_big_dirty.json  okved_big_dirty_shuffled.csv  okved_dirty.csv  okved_dirty_demo.csv  okved_real_dirty.csv  okved_real_dirty_shuffled.csv  okved_sample.csv
data/training/: combined_train_pairs.csv  fstec_train_pairs.csv  okved_train_pairs.csv
docker/: Dockerfile
docs/: api.md  architecture.md  ml-pipeline.md
migrations/: env.py
migrations/versions/: 0001_initial_tables.py
src/nsi_normalizer/: config.py  store.py
src/nsi_normalizer/api/: dependencies.py  main.py  schemas.py
src/nsi_normalizer/api/routers/: health.py  jobs.py  records.py  train.py
src/nsi_normalizer/core/cleaning/: pipeline.py  text_cleaner.py
src/nsi_normalizer/core/normalization/: canonical_selector.py  field_normalizer.py
src/nsi_normalizer/core/parsers/: fstec_parser.py  generic_parser.py  okved_parser.py
src/nsi_normalizer/db/: models.py  session.py
src/nsi_normalizer/ml/: pipeline.py
src/nsi_normalizer/ml/blocking/: blocker.py
src/nsi_normalizer/ml/classification/: dedup_classifier.py
src/nsi_normalizer/ml/features/: feature_extractor.py
src/nsi_normalizer/ml/training/: trainer.py
src/nsi_normalizer/schemas/: __init__.py  common.py  fstec.py  okved.py
src/nsi_normalizer/workers/: celery_app.py  tasks.py
tests/: conftest.py
tests/integration/: test_api.py
tests/ml/fixtures/: okved_pairs_labeled.csv
tests/unit/: test_blocking.py  test_cleaning.py  test_features.py  test_health.py  test_normalization.py  test_parsers.py  test_pipeline.py  test_schemas.py
ui/: app.py
