[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nsi-normalizer"
version = "0.1.0"
description = "ML-based module for automatic normalization of NSI reference data"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "redis>=5.0",
    "celery[redis]>=5.3",
    "pandas>=2.2",
    "scikit-learn>=1.4",
    "rapidfuzz>=3.9",
    "recordlinkage>=0.16",
    "networkx>=3.3",
    "pymorphy3>=2.0",
    "datasketch>=1.6",
    "dateparser>=1.2",
    "defusedxml>=0.7",
    "passlib[bcrypt]>=1.7",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
]

[project.optional-dependencies]
embeddings = [
    "sentence-transformers>=3.0",
    "anthropic>=0.28",
]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-postgresql>=6.0",
    "fakeredis>=2.23",
    "factory-boy>=3.3",
    "bandit>=1.7",
    "pip-audit>=2.7",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[project.scripts]
nsi-normalizer = "nsi_normalizer.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/nsi_normalizer"]

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
per-file-ignores = { "migrations/*" = ["E501", "UP"], "tests/*" = ["E501"] }

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src/nsi_normalizer --cov-report=term-missing --cov-fail-under=70"

[tool.coverage.run]
source = ["src/nsi_normalizer"]
omit = ["*/migrations/*"]

[tool.bandit]
exclude_dirs = ["tests"]
severity = "medium"
